Fixed bug in cropping, cleaned up dialog, added title and header

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -10087,8 +10087,8 @@ body.res div.beta-notice {
     -khtml-border-radius: 4px;
     border-radius: 4px;
     overflow: hidden;
-    height: 32px;
-    width: 32px;
+    height: 28px;
+    width: 28px;
 }
 
 .image-space-h {
